# echidnabot

./: .editorconfig  .env.example  .gitignore  .gitleaks.toml  .guix-channel  .trusted-base-ignore  0-AI-MANIFEST.a2ml  ABI-FFI-README.md  AGENTIC.scm  AI.djot  BRANDING.md  CANONICAL_SOURCE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.adoc  CONTRIBUTING.md  Cargo.toml  Containerfile  ECOSYSTEM.scm  EXPLAINME.adoc  Justfile  MAINTAINERS.adoc  META.scm  NEUROSYM.scm  PLAYBOOK.scm  README.adoc  README.md  RELEASE_CHECKLIST.md  ROADMAP.adoc  RSR_COMPLIANCE.adoc  RSR_OUTLINE.adoc  SECURITY.md  SESSION_SUMMARY_2026-01-29.md  SONNET-TASKS.md  STATE.scm  TESTING-REPORT.adoc  TESTING-REPORT.scm  codemeta.json  compose.yml  echidnabot.example.toml  (+3 more)
.bot_directives/: README.scm  accessibilitybot.scm  cipherbot.scm  echidnabot.scm  hypatia.scm
.claude/: CLAUDE.md
.claude/settings/: mcp.json
.clusterfuzzlite/: Dockerfile  build.sh  project.yaml
.github/: CODEOWNERS  topics.txt
.github/workflows/: cargo-audit.yml  casket-pages.yml  cflite_batch.yml  cflite_pr.yml  codeql.yml  container.yml  db-checks.yml  docs.yml  echidna-fuzz.yml  echidnabot.yml  governance.yml  hypatia-scan.yml  mirror.yml  publish.yml  quality.yml  release.yml  rust-ci.yml  scorecard-enforcer.yml  scorecard.yml  secret-scanner.yml  stress-test.yml  ts-blocker.yml
.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
.machine_readable/6a2/: AGENTIC.a2ml  ANCHOR.a2ml  ECOSYSTEM.a2ml  META.a2ml  STATE.a2ml
.machine_readable/6scm/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
.machine_readable/bot_directives/: README.a2ml  accessibilitybot.a2ml  (+3 more)
.well-known/: ai.txt  consent-required.txt  dc.xml  humans.txt  provenance.json  security.txt
benches/: echidnabot_bench.rs
config/: echidnabot.ncl
contracts/: Token.sol  TokenEchidnaTest.sol
docs/: ARCHITECTURE.adoc  CITATIONS.adoc  MCP-TEMPORARY-EXCEPTION.adoc  casket.toml  deployment.adoc  proof-debt.md  tech-debt-2026-05-26.md
echidna/: echidna-assertion.yaml  echidna-ci.yaml  echidna-config.yaml  echidna-no-flaky-assertion.yaml  echidna-no-flaky.yaml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_config.rs  fuzz_hmac.rs  fuzz_webhook_json.rs
hooks/: pre-commit-tsjs-blocker.sh
migrations/: 20260602000001_initial_schema.sql
proofs/: ECHO-TYPES-AUDIT.md
scripts/: echidna-gen.js
src/: config.rs  error.rs  lib.rs  llm.rs  main.rs  observability.rs  result_formatter.rs  shutdown.rs
tests/: integration_tests.rs  lifecycle.rs  property_tests.rs  seam_test.rs  smoke.rs
wiki/: Architecture.md  FAQ.md  Getting-Started.md  Home.md  Supported-Provers.md
(+79 files in other folders)
